2013-05-24  Thomas Heller <theller@ctypes.org>

	* properly implemented the activation context handling like it
	works in the python dll itself: We store the actctx, and wrap
	calls to MemoryLoadLibrary with _My_ActivateActCtx() and
	_My_DeactivateActCtx().


2009-08-14  Thomas Heller  <theller@python.net>

	* Fix 'DeprecationWarning: the sets module is deprecated' in Python 2.6,
	when building an executable.

2008-04-10  Mark Hammond

	* If a Python 2.5 built app was installed over a Python 2.4 built app,
	the app would crash as Python 2.5 loaded Python 2.4's zlib.pyd; zlib is
	builtin in Python 2.5 and later, so no 2.5 version of zlib.pyd exists.

2008-12-15  Mark Hammond

	* Fix via the mailing list to fix strange icons being displayed on Vista.

2008-11-06  Thomas Heller  <theller@python.net>

	* Fixed a modulefinder crash on certain relative imports.

2008-11-01  Thomas Heller  <theller@python.net>

	* Changed the py2exe\samples\singlefile\gui\test_wx.py sample to
	use the wx package instead of the old wxPython package.

2008-08-28 Mark Hammond <mhammond@skippinet.com.au>

	* Copy the manifest, if any, from the 'template' into the targets
	to ensure embedded assembly references, as required for python 2.6 based
	apps, are copied.

	* Allow each target to specify Vista User Access Control flags. For 
	example, specifying 'uac_execution_info="requireAdministrator"' would
	force elevation for the final executable.

2008-05-19  Jimmy Retzlaff  <jimmy@retzlaff.com>

	* Bump version number to 0.6.8.

	* Updated test suite to be smarter about which interpreters to use
	for testing and to output stats.

	* Merged modulefinder.py r59200 from the Python svn trunk into
	mf.py in order to support relative imports.

	* Use Python 2.5 to build the source distribution.

	* Include the entire test suite in the source distribution.

2008-04-17  Thomas Heller  <theller@python.net>

	* Changes to the test suite.

	* Fix MemoryLoadLibrary to handle loading function addresses by